# OpenCALM-7B-SandBox

./: pyproject.toml
opencalm7b/: open-calm-small.py
