[tool.poetry]
name = "opencalm7b"
version = "0.1.0"
description = ""
authors = ["miyakei1225 <miyakeionigiri@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.29.2"
accelerate = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
